# black_hole_simulator

./: .gitignore  README.md
bh_sim_2d/: CMakeLists.txt  README.md
bh_sim_2d/src/: main.cpp
